# axenil-chess

./: .gitignore  Cargo.toml
chess_gui/: Cargo.toml
chess_gui/src/: chess_controller.rs  chess_gui_view.rs  main.rs
multiplayer/: Cargo.toml  hello.html
multiplayer/src/: bin.rs  chess_communicator.rs  lib.rs  main.rs  message.rs
multiplayer/src/client/: main.rs
multiplayer/src/server/: main.rs
rust_chess/src/: board.rs  moves.rs
