[package]
name = "multiplayer"
version = "0.1.0"
authors = ["Malte Blomqvist <blomqvist.malte@telia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "multiplayer"
path = "src/lib.rs"

[[bin]]
name = "multiplayer"
path = "src/bin.rs"

[dependencies]
chess_gui = {path = "../chess_gui"}

